#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-05-36
2015-08-10 Mikhail S. Dubrovin	
- NDArrIOV1 - fix migration to RHEL7 problem reported by David in PSAS-171.

Tag: V00-05-35
2015-07-07 Mikhail S. Dubrovin	
- NDArrIOV1.h - fix doxygen documentation.
	
Tag: V00-05-34
2015-06-05 Mikhail S. Dubrovin	
- NDArrIOV1::get_ndarray - return empty ndarray in stead of zero-pointer, a lot of cosmetic changes.
	
Tag: V00-05-33
2015-05-22 Mikhail S. Dubrovin	
- NDArrIOV1 - use enumerated m_status in stead of string, updated method str_status() (for PSAS-139).
	
Tag: V00-05-32
2015-05-21 Mikhail S. Dubrovin	
- NDArrIOV1 - improve messages (PSAS-148)

Tag: V00-05-31
2015-05-18 Mikhail S. Dubrovin	
- NDArrIOV1.h - improve memory management in destructor (PSAS-148)
	
Tag: V00-05-30
2015-05-13 Mikhail S. Dubrovin	
- PrincetonBaseV1.h - set Rows=0, Cols=0 in order to support variable shape data for Princeton.

Tag: V00-05-29
2015-04-07 Mikhail S. Dubrovin	
- in NDArrIOV1.cpp - in constructor 2 set m_size = nda_def.size(), other things are cosmetic.
	
Tag: V00-05-28
2015-03-10 Mikhail S. Dubrovin	
- AndorBaseV1.h - set Rows=0, Cols=0 in order to support variable shape for 514x512 and 2048x2048 data (PSAS-121) 

Tag: V00-05-27
2015-03-09 Mikhail S. Dubrovin	
- AndorBaseV1.h - set Rows=512, Cols=512 for SxrEndstation.0:Andor.1/2 in sxrg3715-r0046, use cmod pars 2,10,10,Cols (PSAS-121)
	
Tag: V00-05-26
2015-01-13 Mikhail S. Dubrovin	
- NDArrIOV1 - add print_bits parameter in static method save_ndarray (PSAS-44)
	
Tag: V00-05-25
2015-01-06 Mikhail S. Dubrovin	
- NDArrIOV1.cpp - add instatiation of templates for int16_t, uint8_t