@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-37
+2016-02-08 Mikhail S. Dubrovin	
+- add Andor3dBaseV1.h (PSAS-139)
+
 Tag: V00-05-36
 2015-08-10 Mikhail S. Dubrovin	
 - NDArrIOV1 - fix migration to RHEL7 problem reported by David in PSAS-171.
